# rotmg-stash

./: .env.example  .gitignore  .prettierignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-and-publish.yml
assets/: README.md  april-fools-items.json  items.json
public/: assets-config.json  service-worker.js
public/rotmg-assets/: README.md  sheets.json
public/themes/: mdc-dark-deeppurple.css  mdc-light-deeppurple.css
scripts/: generate-libraries.js  get-device-token.ps1
src/: App.scss  App.tsx  constants.ts  index.scss  main.tsx  themeRegistry.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: devicetoken_script.rs  lib.rs  main.rs  util.rs
src/api/: realmApi.ts
src/api/items/: itemsApi.ts
src/api/mapping/: account-mapping.ts  char-item-enchantments.test.ts  char-mapping.ts  enchantment-mapping.ts  exalt-mapping.ts  item-mapping.ts  totals-mapping.ts  util.ts
src/api/models/: account-ui-model.ts  char-ui-model.ts  charlist-response-ui-model.ts  exalt-ui-model.ts
src/api/tauri/: tauriApi.ts  tauriCommandQuery.ts
src/cache/: account-model.ts  export-model.ts  localstorage-service.ts  settings-model.ts  totals-model.ts
src/cache/migration/: default-settings.ts  settings-migration.ts
src/components/Account/: Account.tsx  AccountInfo.module.scss  AccountInfo.tsx  Exalts.module.scss  Exalts.tsx  OwnedSkinsDialog.tsx  Stats.scss  types.ts
src/components/Bingo/: Bingo.module.scss  Bingo.tsx  bingo-generator.test.ts  bingo-generator.ts  bingo-presets.ts
src/components/Character/: Character.tsx  Character3DViewerDialog.tsx  CharacterPortrait.tsx  Characters.module.scss  Characters.tsx  CharactersInfo.tsx  Equipment.tsx  SkinViewer3D.tsx  Stats.tsx
src/components/CharacterBuilder/: CharacterBuilder.module.scss  CharacterBuilder.tsx  CharacterBuilderDialog.tsx  ReelSpinnerSlot.tsx  ResultPopupDialog.tsx  SkinSpinnerSlot.tsx
src/components/Icons/: LootBoostIcon.tsx
src/components/Item/: Item.module.scss  Item.tsx  Item3DViewerDialog.tsx  ItemList.module.scss  ItemList.tsx  ItemSearch.module.scss  ItemSearch.tsx  ItemTooltip.module.scss  ItemTooltip.tsx  ItemViewer3D.tsx  UnknownItem.tsx
src/components/Layout/: Footer.module.scss  Footer.tsx  Header.tsx  MainLayout.module.scss  MainLayout.tsx  RateLimitBanner.tsx
src/components/Queue/: Queue.module.scss  Queue.tsx  QueueInfoDialog.tsx
src/components/RateLimit/: RateLimitAlert.module.scss  RateLimitAlert.tsx  RateLimitChecker.tsx  RateLimitContainer.tsx
src/components/Settings/: Configuration.module.scss  Configuration.tsx  Settings.tsx
src/components/Shell/: Footer.module.scss  Footer.tsx  Header.module.scss  MainLayout.tsx  RateLimitBanner.tsx  ScrollToTop.tsx
src/components/Totals/: Totals.module.scss  Totals.tsx
src/components/Update/: UpdateChecker.tsx
src/components/Vault/: Vault.tsx  VaultOverview.tsx
src/hooks/: crypto.tsx  debounce.tsx  redux.ts  renderIfVisible.tsx
src/pages/: DebugPage.tsx  MainPage.tsx
src/providers/: ConstantsProvider.tsx  ItemsProvider.tsx  SettingsProvider.tsx
src/realm/models/: charlist-response.ts
src/realm/renders/: aliases.ts  classes.ts  (+19 more)
src/store/: index.ts
src/utils/: item-enchantments.ts  item-name-map.ts  masking.ts  portrait.ts  rate-limit.ts  sorting.ts  stars.ts  types.ts  update-check.ts  xml.ts
(+25 files in other folders)
