[package]
name = "rotmg-stash"
version = "1.0.7"
description = "RotMG Stash"
authors = ["link3337"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rotmg_stash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["devtools"] }
tauri-plugin-shell = "2.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
reqwest = { version = "0.12.27", features = ["blocking", "json"] }
url = "2.5.7"
regex = "1.12.2"
rand = "0.9.2"
dirs = "6.0.0"
log = "0.4.29"
tauri-plugin-log = "2.7.1"
base64 = "0.22.1"
tauri-plugin-dialog = "2.4.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"
