[package]
name = "rotmg-stash"
version = "1.1.2"
description = "RotMG Stash"
authors = ["link3337"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rotmg_stash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["devtools"] }
tauri-plugin-shell = "2.3.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12.27", features = ["blocking", "json"] }
url = "2.5.8"
regex = "1.12.3"
rand = "0.9.2"
dirs = "6.0.0"
log = "0.4.29"
tauri-plugin-log = "2.8.0"
base64 = "0.22.1"
tauri-plugin-dialog = "2.6.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"
